...
          const SizedBox(height: 8),
          Row(
            children: [
              Expanded(
                child: Text(
                  invitationCode,
                  key: const Key('text_invite_code'),
                  style: const TextStyle(
                    fontFamily: 'monospace',
                    fontWeight: FontWeight.bold,
                    fontSize: 24,
                    color: NkColors.onDark,
                    letterSpacing: 8,
...
