...
    }
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('pending_request_view'),
      backgroundColor: NkColors.canvas,
      body: SafeArea(
        child: Padding(
          padding: const EdgeInsets.symmetric(horizontal: 32.0, vertical: 48.0),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
...
